fix wrapping

--- a/styles/main.css
+++ b/styles/main.css
@@ -35,7 +35,6 @@
 
 .item-label {
   margin-left: 0.5em;
-  width: 18em;
 }
 
 todos {
@@ -45,16 +44,7 @@ todos {
 .item-container {
   padding: 0.5em 0.5em;
   position: relative;
-  /*height: 2.5em;*/
   height: auto;
-}
-
-.valign {
-  vertical-align: top;
-}
-
-.vmiddle {
-  vertical-align: middle;
 }
 
 .float-right {
